18주차/cicd-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cicd-deploy
  labels:
    app: cicd-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cicd-deploy
  template:
    metadata:
      labels:
        app: cicd-deploy
    spec:
      containers:
      - name: cicd-project
        image: namgonkim/cicd-project:2.0
        ports:
        - containerPort: 8080
