18주차/demo-pv-1.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-echo
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
    volumeMounts:
      - mountPath: /data
        name: my-empty-volume
  - name: echo
    image: gihyodocker/echo:latest
    ports:
    - containerPort: 8080
    volumeMounts:
      - mountPath: /data
        name: my-empty-volume
  volumes:
    - name: my-empty-volume
      emptyDir: {}
