18주차/pod-pvc-exam.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: test-deployment
  labels:
    app: test-deployment
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: test-deployment
  template:
    metadata: 
      labels:
        app: test-deployment
    spec: 
      containers:
      - name: test-container
        image: nginx:latest
        ports:
        - containerPort: 8080
        volumeMounts: 
        - mountPath: "/var/log/test.log"
          name: dev-volume
      volumes:
      - name: dev-volume
        persistentVolumeClaim:
          claimName: dev-pvc
