18주차/simple-pv-3-5.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-ebs
spec:
  containers:
    - image: k8s.gcr.io/test-webserver
      name: test-container
      volumeMounts: 
      - mountPath: /test-ebs
        name: test-volume
  volumes:
    - name: test-volume
      awsElasticBlockStore:
        volumeID: "{volume-id}"
        fsType: ext4
