18주차/cicd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: my-ingress
spec: 
  rules:
  - http: 
      paths:
        - path: /
          pathType: Prefix
          backend: 
            service: 
              name: cicd-svc
              port:
                number: 8080
